--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Sara Cheng's Site</div>
-                <div class="intro-heading">Hi!</div>
+                <div class="intro-heading">Hi! My name is 成竹青！</div>
                 <a href="#portfolio" class="page-scroll btn btn-xl">My Projects</a>
             </div>
         </div>
@@ -97,16 +97,23 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Recipe Organizer</h4>
-                        <p class="text-muted">JavaScripte/AngularJS; Python/Django</p>
+                        <p class="text-muted"><code>JavaScripte/AngularJS; Python/Django/Rest Framework</code><br>
+                        My first successful project. I like the review feature best. You can add your review without log in and add STARS!
+                            Play with it yourself!
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://github.com/zhcheng1/">
+                    <a href="http://neutroninteractive.com/">
                         <img src="img/valence.jpg" class="img-responsive project-img" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Valence</h4>
-                        <p class="text-muted">Python/Django; Project for Neutron Interactive (Private)</p>
+                        <p class="text-muted"><code>Python/Django</code><br>
+                        It is a pure Django project for <a href="http://neutroninteractive.com/">Neutron Interactive</a>.
+                        I built a custom template tag. I also led my team to build the password reset system.
+                            You would receive a link in email with random string.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -115,7 +122,10 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>DocStop</h4>
-                        <p class="text-muted">JavaScripte/AngularJS; Python/Django</p>
+                        <p class="text-muted"><code>JavaScripte/AngularJS; Python/Django/Requests</code>
+                        As a user, you can call the cliniko.com API to get available time and make appointments with doctors.
+                            I built the entire backend with my team.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -128,8 +138,12 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Myself</h2>
-                    <h3 class="section-subheading text-muted">Goals determine what you are going to be.—— Julius Erving</h3>
-                    <h3 class="section-subheading text-muted">In general</h3>
+                    <h3 class="section-subheading text-muted">QUESTION: where was the home page picture taken?<br>
+                    ANSWER: Nanjing, China!<br>
+                    </h3>
+                    <h3 class="section-subheading text-muted">
+                        I am a passionate developer, a girl, and a explorer in this big world. Fast learner, of course.
+                    </h3>
                 </div>
             </div>
             <div class="row">
@@ -142,7 +156,9 @@
                                     <h4 class="subheading">Romantic College Time</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Full of books. With dreams to see the world.</p>
+                                    <p class="text-muted">I graduated from <a href="http://www.nju.edu.cn/english/">Nanjing University</a>.
+                                        It is a Top-5 university in China with 113 years of history. My life there was full of books and poems,
+                                        with dreams to see the world.</p>
                                 </div>
                             </div>
                         </li>
@@ -150,10 +166,14 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>2011-2014</h4>
-                                    <h4 class="subheading">Two Master in a Roll</h4>
+                                    <h4 class="subheading">Two Master - Syracuse University</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Marched to the statistics world. Research assistant for two years in health communication.</p>
+                                    <p class="text-muted">SU gave me an opportunity to find my real interests.
+                                        I always love maths so I marched to the statistics world.
+                                        The experience of being a research assistant for two years in health communication helped me to be a quick learner
+                                        and a critical thinker.
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -164,7 +184,10 @@
                                     <h4 class="subheading">Coding Campus</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I finally determined to become a developer. CC helped me to have a quick start.</p>
+                                    <p class="text-muted">How to help the world with my skills? Which job allows me to learning and thinking all the time?
+                                        Be a programmer! CC helped me to have a quick start. I learned Python/Django/AngularJS there and many other technologies.
+                                    <br>I still have a long way to go. The skills to add are Pandas, Numpy, Java, and lots of algorithm practice.
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -187,7 +210,12 @@
                 </div>
             </div>
             <div class="row">
+               <div class="col-lg-6">
+                    <img src="img/tou.jpg">
+                </div>
                 <div class="col-lg-6">
+                    <br>
+                    <br>
                     <h3> GitHub: <a href="https://github.com/zhcheng1"><i class="fa fa-github"> zhcheng1</i></a>
                     </h3>
                     <h3>LinkedIn: <a href="http://www.linkedin.com/in/sarazqcheng"><i class="fa fa-linkedin"> Sara Zhuqing Cheng</i></a>
@@ -196,8 +224,8 @@
                     </h3>
                     <h3>QQ: <i class="fa fa-pencil"> 390437136</i>
                     </h3>
-
                 </div>
+
             </div>
         </div>
     </section>
@@ -206,7 +234,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <p>See you later!</p>
+                    <p>@See you later!</p>
                 </div>
             </div>
         </div>
