some changes to the index

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Recipe Organizer</h4>
-                        <p class="text-muted"><code>JavaScripte/AngularJS; Python/Django/Rest Framework</code><br>
-                        My first successful project. I like the review feature best. You can add your review without log in and add STARS!
+                        <p class="text-muted"><code>JavaScript/AngularJS; Python/Django/Rest Framework</code><br>
+                        My first successful project. I like the review feature best. You can add your review without login and add STARS!
                             Play with it yourself!
                         </p>
                     </div>
@@ -110,9 +110,9 @@
                     <div class="portfolio-caption">
                         <h4>Valence</h4>
                         <p class="text-muted"><code>Python/Django</code><br>
-                        It is a pure Django project for <a href="http://neutroninteractive.com/">Neutron Interactive</a>.
-                        I built a custom template tag. I also led my team to build the password reset system.
-                            You would receive a link in email with random string.
+                        A pure Django project for <a href="http://neutroninteractive.com/">Neutron Interactive</a>.
+                        I built a custom template tag and led my team to build the password reset functionality.
+                            It allows a user to receive a randomized link in their email which they can follow to reset their password.
                         </p>
                     </div>
                 </div>
@@ -122,8 +122,8 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>DocStop</h4>
-                        <p class="text-muted"><code>JavaScripte/AngularJS; Python/Django/Requests</code>
-                        As a user, you can call the cliniko.com API to get available time and make appointments with doctors.
+                        <p class="text-muted"><code>JavaScript/AngularJS; Python/Django/Requests</code><br>
+                        Calls the <a href="https://www.cliniko.com/">Cliniko</a> API to get a doctor's schedule and set appointments.
                             I built the entire backend with my team.
                         </p>
                     </div>
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">I graduated from <a href="http://www.nju.edu.cn/english/">Nanjing University</a>.
-                                        It is a Top-5 university in China with 113 years of history. My life there was full of books and poems,
+                                        It is one of the top five universities in China with 113 years of history. My life there was full of books and poems,
                                         with dreams to see the world.</p>
                                 </div>
                             </div>
@@ -166,12 +166,12 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>2011-2014</h4>
-                                    <h4 class="subheading">Two Master - Syracuse University</h4>
+                                    <h4 class="subheading">Two Master's Degrees - Syracuse University</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">SU gave me an opportunity to find my real interests.
-                                        I always love maths so I marched to the statistics world.
-                                        The experience of being a research assistant for two years in health communication helped me to be a quick learner
+                                    <p class="text-muted">Syracuse University gave me an opportunity to find my real interests.
+                                        I've always loved math, so I marched into the statistics world.
+                                        The experience of being a research assistant for two years in health communication helped me become a quick learner
                                         and a critical thinker.
                                     </p>
                                 </div>
@@ -184,9 +184,9 @@
                                     <h4 class="subheading">Coding Campus</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">How to help the world with my skills? Which job allows me to learning and thinking all the time?
-                                        Be a programmer! CC helped me to have a quick start. I learned Python/Django/AngularJS there and many other technologies.
-                                    <br>I still have a long way to go. The skills to add are Pandas, Numpy, Java, and lots of algorithm practice.
+                                    <p class="text-muted">How could I help the world with my skills? Which job would allow me to be learning and thinking all the time?
+                                        A career as a programmer! Coding Campus helped me jump start my career as a programmer. I learned Python, Django, JavaScript, and AngularJS during this time, as well as many other technologies.
+                                    <br>There is a lot more I still want to learn including Pandas, Numpy, Java, algorithms, and so much more.
                                     </p>
                                 </div>
                             </div>
@@ -230,15 +230,15 @@
         </div>
     </section>
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <p>@See you later!</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <!--<footer>-->
+        <!--<div class="container">-->
+            <!--<div class="row">-->
+                <!--<div class="col-md-4">-->
+                    <!--<p>@See you later!</p>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</footer>-->
 
     <!-- Portfolio Modals -->
     <!-- Use the modals below to showcase details about your portfolio projects! -->
